--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ version '1.1'
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
@@ -14,6 +17,7 @@ dependencies {
     implementation 'com.intellij:forms_rt:7.0.3'
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.google.code.gson:gson:2.10'
+    implementation files('libs/montoya-api-0.10.1.jar')
 }
 
 jar {
