--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,20 @@ plugins {
 }
 
 group 'com.rsm.reproducer'
-version '1.2'
+version '1.3'
+
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 dependencies {
     implementation 'com.intellij:forms_rt:7.0.3'
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.google.code.gson:gson:2.10'
-    implementation files('libs/montoya-api-0.10.1.jar')
+    implementation 'net.portswigger.burp.extensions:montoya-api:2023.2'
 }
 
 jar {
